exports[`invalid(1): {\"name\": \"p\", \"exports\": \"./dist/b.js\", \"files\": [\"d*e\"]} 1`] = `

[Input]
  1 | {"name": "p", "exports": "./dist/b.js", "files": ["d*e"]}

`;

exports[`invalid(1): {\"name\": \"p\", \"exports\": \"./dist/b.js\", \"files\": [\"d*e\"]} 2`] = `

Message:
> 1 | {"name": "p", "exports": "./dist/b.js", "files": ["d*e"]}
    |                          ^^^^^^^^^^^^^ Entry point \`./dist/b.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(10): {\"exports\": \"./src/**/*.js\", \"files\": [\"dist\"]} 1`] = `

[Input]
  1 | {"exports": "./src/**/*.js", "files": ["dist"]}

`;

exports[`invalid(10): {\"exports\": \"./src/**/*.js\", \"files\": [\"dist\"]} 2`] = `

Message:
> 1 | {"exports": "./src/**/*.js", "files": ["dist"]}
    |             ^^^^^^^^^^^^^^^ Entry point \`./src/**/*.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(11): {\"exports\": \"./dist/nested/foo.js\", \"files\": [\"dist/*.js\"]} 1`] = `

[Input]
  1 | {"exports": "./dist/nested/foo.js", "files": ["dist/*.js"]}

`;

exports[`invalid(11): {\"exports\": \"./dist/nested/foo.js\", \"files\": [\"dist/*.js\"]} 2`] = `

Message:
> 1 | {"exports": "./dist/nested/foo.js", "files": ["dist/*.js"]}
    |             ^^^^^^^^^^^^^^^^^^^^^^ Entry point \`./dist/nested/foo.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(12): {\"exports\": \"./a\", \"files\": [\"a*a\"]} 1`] = `

[Input]
  1 | {"exports": "./a", "files": ["a*a"]}

`;

exports[`invalid(12): {\"exports\": \"./a\", \"files\": [\"a*a\"]} 2`] = `

Message:
> 1 | {"exports": "./a", "files": ["a*a"]}
    |             ^^^^^ Entry point \`./a\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(13): {\"exports\": \"./a/nested/b.js\", \"files\": [\"a**b.js\"]} 1`] = `

[Input]
  1 | {"exports": "./a/nested/b.js", "files": ["a**b.js"]}

`;

exports[`invalid(13): {\"exports\": \"./a/nested/b.js\", \"files\": [\"a**b.js\"]} 2`] = `

Message:
> 1 | {"exports": "./a/nested/b.js", "files": ["a**b.js"]}
    |             ^^^^^^^^^^^^^^^^^ Entry point \`./a/nested/b.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(14): {\"exports\": \"./aX/wrong/c.js\", \"files\": [\"a**b/**/c.js\"]} 1`] = `

[Input]
  1 | {"exports": "./aX/wrong/c.js", "files": ["a**b/**/c.js"]}

`;

exports[`invalid(14): {\"exports\": \"./aX/wrong/c.js\", \"files\": [\"a**b/**/c.js\"]} 2`] = `

Message:
> 1 | {"exports": "./aX/wrong/c.js", "files": ["a**b/**/c.js"]}
    |             ^^^^^^^^^^^^^^^^^ Entry point \`./aX/wrong/c.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(15): {\"exports\": \"./ba\", \"files\": [\"a\"]} 1`] = `

[Input]
  1 | {"exports": "./ba", "files": ["a"]}

`;

exports[`invalid(15): {\"exports\": \"./ba\", \"files\": [\"a\"]} 2`] = `

Message:
> 1 | {"exports": "./ba", "files": ["a"]}
    |             ^^^^^^ Entry point \`./ba\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(16): {\"name\": \"p\", \"bin\": {\"x\": \"./index.js\", \"x\": \"./other.js\"}, \"exports\": \"./index.js\", \"files\": [\"dist\"]} 1`] = `

[Input]
  1 | {"name": "p", "bin": {"x": "./index.js", "x": "./other.js"}, "exports": "./index.js", "files": ["dist"]}

`;

exports[`invalid(16): {\"name\": \"p\", \"bin\": {\"x\": \"./index.js\", \"x\": \"./other.js\"}, \"exports\": \"./index.js\", \"files\": [\"dist\"]} 2`] = `

Message:
> 1 | {"name": "p", "bin": {"x": "./index.js", "x": "./other.js"}, "exports": "./index.js", "files": ["dist"]}
    |                                                                         ^^^^^^^^^^^^ Entry point \`./index.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(17): {\"main\": \"./index.js\", \"files\": [\"dist\"]} 1`] = `

[Input]
  1 | {"main": "./index.js", "files": ["dist"]}

`;

exports[`invalid(17): {\"main\": \"./index.js\", \"files\": [\"dist\"]} 2`] = `

Message:
> 1 | {"main": "./index.js", "files": ["dist"]}
    |          ^^^^^^^^^^^^ Entry point \`./index.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(18): {\"name\": \"p\", \"exports\": \"./dist/index.js\", \"files\": [\".\"]} 1`] = `

[Input]
  1 | {"name": "p", "exports": "./dist/index.js", "files": ["."]}

`;

exports[`invalid(18): {\"name\": \"p\", \"exports\": \"./dist/index.js\", \"files\": [\".\"]} 2`] = `

Message:
> 1 | {"name": "p", "exports": "./dist/index.js", "files": ["."]}
    |                          ^^^^^^^^^^^^^^^^^ Entry point \`./dist/index.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(19): {\"browser\": \"./lib/x.js\", \"files\": [\"dist\"]} 1`] = `

[Input]
  1 | {"browser": "./lib/x.js", "files": ["dist"]}

`;

exports[`invalid(19): {\"browser\": \"./lib/x.js\", \"files\": [\"dist\"]} 2`] = `

Message:
> 1 | {"browser": "./lib/x.js", "files": ["dist"]}
    |             ^^^^^^^^^^^^ Entry point \`./lib/x.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(2): {\"name\": \"p\", \"exports\": \"./a/b/c.js\", \"files\": [\"*/*.js\"]} 1`] = `

[Input]
  1 | {"name": "p", "exports": "./a/b/c.js", "files": ["*/*.js"]}

`;

exports[`invalid(2): {\"name\": \"p\", \"exports\": \"./a/b/c.js\", \"files\": [\"*/*.js\"]} 2`] = `

Message:
> 1 | {"name": "p", "exports": "./a/b/c.js", "files": ["*/*.js"]}
    |                          ^^^^^^^^^^^^ Entry point \`./a/b/c.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(20): {\"name\": \"p\", \"main\": \"./index.js\", \"exports\": \"./index.js\", \"files\": [\"dist\"]} 1`] = `

[Input]
  1 | {"name": "p", "main": "./index.js", "exports": "./index.js", "files": ["dist"]}

`;

exports[`invalid(20): {\"name\": \"p\", \"main\": \"./index.js\", \"exports\": \"./index.js\", \"files\": [\"dist\"]} 2`] = `

Message:
> 1 | {"name": "p", "main": "./index.js", "exports": "./index.js", "files": ["dist"]}
    |                       ^^^^^^^^^^^^ Entry point \`./index.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(20): {\"name\": \"p\", \"main\": \"./index.js\", \"exports\": \"./index.js\", \"files\": [\"dist\"]} 3`] = `

Message:
> 1 | {"name": "p", "main": "./index.js", "exports": "./index.js", "files": ["dist"]}
    |                                                ^^^^^^^^^^^^ Entry point \`./index.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(21): {\"exports\":\"./aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.js\",\"files\":[\"*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*z\"]} 1`] = `

[Input]
  1 | {"exports":"./aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.js","files":["*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*z"]}

`;

exports[`invalid(21): {\"exports\":\"./aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.js\",\"files\":[\"*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*z\"]} 2`] = `

Message:
> 1 | {"exports":"./aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.js","files":["*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*a*z"]}
    |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Entry point \`./aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(22): {\"name\": \"p\", \"browser\": {\"a.js\": \"./lib/a.js\"}, \"files\": [\"dist\"]} 1`] = `

[Input]
  1 | {"name": "p", "browser": {"a.js": "./lib/a.js"}, "files": ["dist"]}

`;

exports[`invalid(22): {\"name\": \"p\", \"browser\": {\"a.js\": \"./lib/a.js\"}, \"files\": [\"dist\"]} 2`] = `

Message:
> 1 | {"name": "p", "browser": {"a.js": "./lib/a.js"}, "files": ["dist"]}
    |                                   ^^^^^^^^^^^^ Entry point \`./lib/a.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(23): {\"name\": \"p\", \"browser\": {\"a.js\": \"./lib/a.js\"}} 1`] = `

[Input]
  1 | {"name": "p", "browser": {"a.js": "./lib/a.js"}}

`;

exports[`invalid(23): {\"name\": \"p\", \"browser\": {\"a.js\": \"./lib/a.js\"}} 2`] = `

Message:
> 1 | {"name": "p", "browser": {"a.js": "./lib/a.js"}}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Add a \`files\` allowlist so only intended files are published.

`;

exports[`invalid(24): {\"name\": \"p\", \"files\": [\"dist\"], \"exports\": {\"./readme\": \"./docs/README.md\"}} 1`] = `

[Input]
  1 | {"name": "p", "files": ["dist"], "exports": {"./readme": "./docs/README.md"}}

`;

exports[`invalid(24): {\"name\": \"p\", \"files\": [\"dist\"], \"exports\": {\"./readme\": \"./docs/README.md\"}} 2`] = `

Message:
> 1 | {"name": "p", "files": ["dist"], "exports": {"./readme": "./docs/README.md"}}
    |                                                          ^^^^^^^^^^^^^^^^^^ Entry point \`./docs/README.md\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(25): {\"name\": \"p\", \"files\": [\"dist\"], \"exports\": \"./docs/LICENSE\"} 1`] = `

[Input]
  1 | {"name": "p", "files": ["dist"], "exports": "./docs/LICENSE"}

`;

exports[`invalid(25): {\"name\": \"p\", \"files\": [\"dist\"], \"exports\": \"./docs/LICENSE\"} 2`] = `

Message:
> 1 | {"name": "p", "files": ["dist"], "exports": "./docs/LICENSE"}
    |                                             ^^^^^^^^^^^^^^^^ Entry point \`./docs/LICENSE\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(26): {\"name\": \"p\", \"files\": [\".\"], \"exports\": \"./index.js\"} 1`] = `

[Input]
  1 | {"name": "p", "files": ["."], "exports": "./index.js"}

`;

exports[`invalid(26): {\"name\": \"p\", \"files\": [\".\"], \"exports\": \"./index.js\"} 2`] = `

Message:
> 1 | {"name": "p", "files": ["."], "exports": "./index.js"}
    |                                          ^^^^^^^^^^^^ Entry point \`./index.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(27): {\"name\": \"p\", \"files\": [\"./.\"], \"exports\": \"./index.js\"} 1`] = `

[Input]
  1 | {"name": "p", "files": ["./."], "exports": "./index.js"}

`;

exports[`invalid(27): {\"name\": \"p\", \"files\": [\"./.\"], \"exports\": \"./index.js\"} 2`] = `

Message:
> 1 | {"name": "p", "files": ["./."], "exports": "./index.js"}
    |                                            ^^^^^^^^^^^^ Entry point \`./index.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(28): {\"name\": \"p\", \"exports\": \"./dist/b.js\", \"files\": [\"//dist\"]} 1`] = `

[Input]
  1 | {"name": "p", "exports": "./dist/b.js", "files": ["//dist"]}

`;

exports[`invalid(28): {\"name\": \"p\", \"exports\": \"./dist/b.js\", \"files\": [\"//dist\"]} 2`] = `

Message:
> 1 | {"name": "p", "exports": "./dist/b.js", "files": ["//dist"]}
    |                          ^^^^^^^^^^^^^ Entry point \`./dist/b.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(29): {\"name\": \"p\", \"exports\": \"./dist/b.js\", \"files\": [\".//dist\"]} 1`] = `

[Input]
  1 | {"name": "p", "exports": "./dist/b.js", "files": [".//dist"]}

`;

exports[`invalid(29): {\"name\": \"p\", \"exports\": \"./dist/b.js\", \"files\": [\".//dist\"]} 2`] = `

Message:
> 1 | {"name": "p", "exports": "./dist/b.js", "files": [".//dist"]}
    |                          ^^^^^^^^^^^^^ Entry point \`./dist/b.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(3): {\"name\": \"p\", \"exports\": \"./dist/b.js\", \"files\": [\"other*\"]} 1`] = `

[Input]
  1 | {"name": "p", "exports": "./dist/b.js", "files": ["other*"]}

`;

exports[`invalid(3): {\"name\": \"p\", \"exports\": \"./dist/b.js\", \"files\": [\"other*\"]} 2`] = `

Message:
> 1 | {"name": "p", "exports": "./dist/b.js", "files": ["other*"]}
    |                          ^^^^^^^^^^^^^ Entry point \`./dist/b.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(30): {\"name\": \"p\", \"files\": [\"./\"], \"exports\": \"./index.js\"} 1`] = `

[Input]
  1 | {"name": "p", "files": ["./"], "exports": "./index.js"}

`;

exports[`invalid(30): {\"name\": \"p\", \"files\": [\"./\"], \"exports\": \"./index.js\"} 2`] = `

Message:
> 1 | {"name": "p", "files": ["./"], "exports": "./index.js"}
    |                                           ^^^^^^^^^^^^ Entry point \`./index.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(31): {\"name\": \"p\", \"files\": [\"/\"], \"exports\": \"./index.js\"} 1`] = `

[Input]
  1 | {"name": "p", "files": ["/"], "exports": "./index.js"}

`;

exports[`invalid(31): {\"name\": \"p\", \"files\": [\"/\"], \"exports\": \"./index.js\"} 2`] = `

Message:
> 1 | {"name": "p", "files": ["/"], "exports": "./index.js"}
    |                                          ^^^^^^^^^^^^ Entry point \`./index.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(32): {\"name\": \"p\", \"files\": [\"//\"], \"exports\": \"./index.js\"} 1`] = `

[Input]
  1 | {"name": "p", "files": ["//"], "exports": "./index.js"}

`;

exports[`invalid(32): {\"name\": \"p\", \"files\": [\"//\"], \"exports\": \"./index.js\"} 2`] = `

Message:
> 1 | {"name": "p", "files": ["//"], "exports": "./index.js"}
    |                                           ^^^^^^^^^^^^ Entry point \`./index.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(33): {\"name\": \"p\", \"files\": [\"./\"], \"exports\": {\"./a\": \"./dist/a.js\"}} 1`] = `

[Input]
  1 | {"name": "p", "files": ["./"], "exports": {"./a": "./dist/a.js"}}

`;

exports[`invalid(33): {\"name\": \"p\", \"files\": [\"./\"], \"exports\": {\"./a\": \"./dist/a.js\"}} 2`] = `

Message:
> 1 | {"name": "p", "files": ["./"], "exports": {"./a": "./dist/a.js"}}
    |                                                   ^^^^^^^^^^^^^ Entry point \`./dist/a.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(34): {\"name\": \"p\", \"files\": [\"/\"], \"exports\": \"./dist/index.js\"} 1`] = `

[Input]
  1 | {"name": "p", "files": ["/"], "exports": "./dist/index.js"}

`;

exports[`invalid(34): {\"name\": \"p\", \"files\": [\"/\"], \"exports\": \"./dist/index.js\"} 2`] = `

Message:
> 1 | {"name": "p", "files": ["/"], "exports": "./dist/index.js"}
    |                                          ^^^^^^^^^^^^^^^^^ Entry point \`./dist/index.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(35): {\"name\": \"p\", \"files\": [\".\"], \"exports\": {\"./*\": \"./*\"}} 1`] = `

[Input]
  1 | {"name": "p", "files": ["."], "exports": {"./*": "./*"}}

`;

exports[`invalid(35): {\"name\": \"p\", \"files\": [\".\"], \"exports\": {\"./*\": \"./*\"}} 2`] = `

Message:
> 1 | {"name": "p", "files": ["."], "exports": {"./*": "./*"}}
    |                                                  ^^^^^ Entry point \`./*\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(36): {\"name\": \"p\", \"files\": [\"//dist\"], \"exports\": {\"./*\": \"./*\"}} 1`] = `

[Input]
  1 | {"name": "p", "files": ["//dist"], "exports": {"./*": "./*"}}

`;

exports[`invalid(36): {\"name\": \"p\", \"files\": [\"//dist\"], \"exports\": {\"./*\": \"./*\"}} 2`] = `

Message:
> 1 | {"name": "p", "files": ["//dist"], "exports": {"./*": "./*"}}
    |                                                       ^^^^^ Entry point \`./*\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(37): {\"name\": \"p\", \"files\": [\"distribution\"], \"exports\": {\"./*\": \"./dist/*.js\"}} 1`] = `

[Input]
  1 | {"name": "p", "files": ["distribution"], "exports": {"./*": "./dist/*.js"}}

`;

exports[`invalid(37): {\"name\": \"p\", \"files\": [\"distribution\"], \"exports\": {\"./*\": \"./dist/*.js\"}} 2`] = `

Message:
> 1 | {"name": "p", "files": ["distribution"], "exports": {"./*": "./dist/*.js"}}
    |                                                             ^^^^^^^^^^^^^ Entry point \`./dist/*.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(38): {\"name\": \"p\", \"files\": [\"dist/*.js\"], \"exports\": {\".\": \"./dist/index.js\", \"./styles/*\": \"./dist/*.css\"}} 1`] = `

[Input]
  1 | {"name": "p", "files": ["dist/*.js"], "exports": {".": "./dist/index.js", "./styles/*": "./dist/*.css"}}

`;

exports[`invalid(38): {\"name\": \"p\", \"files\": [\"dist/*.js\"], \"exports\": {\".\": \"./dist/index.js\", \"./styles/*\": \"./dist/*.css\"}} 2`] = `

Message:
> 1 | {"name": "p", "files": ["dist/*.js"], "exports": {".": "./dist/index.js", "./styles/*": "./dist/*.css"}}
    |                                                                                         ^^^^^^^^^^^^^^ Entry point \`./dist/*.css\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(39): {\"name\": \"p\", \"files\": [\"index.js\", \"dist/*.d.ts\"], \"exports\": {\".\": \"./index.js\", \"./*\": \"./dist/*.js\"}} 1`] = `

[Input]
  1 | {"name": "p", "files": ["index.js", "dist/*.d.ts"], "exports": {".": "./index.js", "./*": "./dist/*.js"}}

`;

exports[`invalid(39): {\"name\": \"p\", \"files\": [\"index.js\", \"dist/*.d.ts\"], \"exports\": {\".\": \"./index.js\", \"./*\": \"./dist/*.js\"}} 2`] = `

Message:
> 1 | {"name": "p", "files": ["index.js", "dist/*.d.ts"], "exports": {".": "./index.js", "./*": "./dist/*.js"}}
    |                                                                                           ^^^^^^^^^^^^^ Entry point \`./dist/*.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(4): {\"exports\": \"./dist/foo.js\", \"files\": [\"*.js\"]} 1`] = `

[Input]
  1 | {"exports": "./dist/foo.js", "files": ["*.js"]}

`;

exports[`invalid(4): {\"exports\": \"./dist/foo.js\", \"files\": [\"*.js\"]} 2`] = `

Message:
> 1 | {"exports": "./dist/foo.js", "files": ["*.js"]}
    |             ^^^^^^^^^^^^^^^ Entry point \`./dist/foo.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(40): {\"name\": \"p\", \"files\": [\"dist/index.d.ts\"], \"exports\": {\"./*\": \"./dist/*.js\"}} 1`] = `

[Input]
  1 | {"name": "p", "files": ["dist/index.d.ts"], "exports": {"./*": "./dist/*.js"}}

`;

exports[`invalid(40): {\"name\": \"p\", \"files\": [\"dist/index.d.ts\"], \"exports\": {\"./*\": \"./dist/*.js\"}} 2`] = `

Message:
> 1 | {"name": "p", "files": ["dist/index.d.ts"], "exports": {"./*": "./dist/*.js"}}
    |                                                                ^^^^^^^^^^^^^ Entry point \`./dist/*.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(41): {\"name\": \"p\", \"files\": [\"**/index.js\"], \"exports\": \"./myindex.js\"} 1`] = `

[Input]
  1 | {"name": "p", "files": ["**/index.js"], "exports": "./myindex.js"}

`;

exports[`invalid(41): {\"name\": \"p\", \"files\": [\"**/index.js\"], \"exports\": \"./myindex.js\"} 2`] = `

Message:
> 1 | {"name": "p", "files": ["**/index.js"], "exports": "./myindex.js"}
    |                                                    ^^^^^^^^^^^^^^ Entry point \`./myindex.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(5): {\"name\": \"p\", \"exports\": {\".\": \"./lib/index.js\", \"./metadata\": \"./sub/package.json\"}, \"files\": [\"lib\"]} 1`] = `

[Input]
  1 | {"name": "p", "exports": {".": "./lib/index.js", "./metadata": "./sub/package.json"}, "files": ["lib"]}

`;

exports[`invalid(5): {\"name\": \"p\", \"exports\": {\".\": \"./lib/index.js\", \"./metadata\": \"./sub/package.json\"}, \"files\": [\"lib\"]} 2`] = `

Message:
> 1 | {"name": "p", "exports": {".": "./lib/index.js", "./metadata": "./sub/package.json"}, "files": ["lib"]}
    |                                                                ^^^^^^^^^^^^^^^^^^^^ Entry point \`./sub/package.json\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(6): {\"name\": \"foo\"} 1`] = `

[Input]
  1 | {"name": "foo"}

`;

exports[`invalid(6): {\"name\": \"foo\"} 2`] = `

Message:
> 1 | {"name": "foo"}
    | ^^^^^^^^^^^^^^^ Add a \`files\` allowlist so only intended files are published.

`;

exports[`invalid(7): {\"name\": \"foo\", \"private\": false} 1`] = `

[Input]
  1 | {"name": "foo", "private": false}

`;

exports[`invalid(7): {\"name\": \"foo\", \"private\": false} 2`] = `

Message:
> 1 | {"name": "foo", "private": false}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Add a \`files\` allowlist so only intended files are published.

`;

exports[`invalid(8): {\"exports\": \"./dist/index.js\", \"files\": [\"src\"]} 1`] = `

[Input]
  1 | {"exports": "./dist/index.js", "files": ["src"]}

`;

exports[`invalid(8): {\"exports\": \"./dist/index.js\", \"files\": [\"src\"]} 2`] = `

Message:
> 1 | {"exports": "./dist/index.js", "files": ["src"]}
    |             ^^^^^^^^^^^^^^^^^ Entry point \`./dist/index.js\` is not covered by the \`files\` allowlist.

`;

exports[`invalid(9): {\"types\": \"./types/index.d.ts\", \"files\": [\"dist\"]} 1`] = `

[Input]
  1 | {"types": "./types/index.d.ts", "files": ["dist"]}

`;

exports[`invalid(9): {\"types\": \"./types/index.d.ts\", \"files\": [\"dist\"]} 2`] = `

Message:
> 1 | {"types": "./types/index.d.ts", "files": ["dist"]}
    |           ^^^^^^^^^^^^^^^^^^^^ Entry point \`./types/index.d.ts\` is not covered by the \`files\` allowlist.

`;
